--- a/index.html
+++ b/index.html
@@ -10,13 +10,30 @@
     <nav class="navbar">
       <div class="navdiv">
         <ul class="nav-list">
-          <li>Home</li>
-          <li>About</li>
-          <li>Services</li>
-          <li>Blog</li>
-          <li>Contact</li>
+          <a href="#"><li>Home</li></a>
+          <a href="#"><li>About</li></a>
+          <a href="#"><li>Services</li></a>
+          <a href="#"><li>Blog</li></a>
+          <a href="#"><li>Contact</li></a>
+        </ul>
+
+        <ul class="user-credentials">
+          <a href="#"><li>Login</li></a>
+          <a href="#"><li>Sign Up</li></a>
         </ul>
       </div>
     </nav>
+
+    <section class="hero-section">
+      <div class="left-div">
+        <h3>Hi, I'm</h3>
+        <h1>John Doe</h1>
+        <h4>A Full Stack <span id="soft-eng-text">Software Engineer</span>!</h4>
+      </div>
+
+      <div class="right-div">
+        <img src="./myImage.jpg" alt="my-image" />
+      </div>
+    </section>
   </body>
 </html>
