--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul class="nav-list">
           <a href="#"><li>Home</li></a>
           <a href="#"><li>About</li></a>
-          <a href="#"><li>Services</li></a>
+          <a href="#services"><li>Services</li></a>
           <a href="#"><li>Blog</li></a>
           <a href="#"><li>Contact</li></a>
         </ul>
@@ -33,6 +33,36 @@
 
       <div class="right-div">
         <img src="./myImage.jpg" alt="my-image" />
+      </div>
+    </section>
+
+    <section class="services-section" id="services">
+      <h1>Our Services</h1>
+
+      <div class="container">
+        <div class="card">
+          <h2>Web Development</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo
+            alias temporibus amet aperiam repellendus possimus?
+          </p>
+        </div>
+
+        <div class="card">
+          <h2>Graphic Design</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo
+            alias temporibus amet aperiam repellendus possimus?
+          </p>
+        </div>
+
+        <div class="card">
+          <h2>Digital Marketing</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo
+            alias temporibus amet aperiam repellendus possimus?
+          </p>
+        </div>
       </div>
     </section>
   </body>
