--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal Portfolio</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
@@ -14,7 +21,7 @@
           <a href="#"><li>About</li></a>
           <a href="#services"><li>Services</li></a>
           <a href="#"><li>Blog</li></a>
-          <a href="#"><li>Contact</li></a>
+          <a href="#contact"><li>Contact</li></a>
         </ul>
 
         <ul class="user-credentials">
@@ -65,5 +72,36 @@
         </div>
       </div>
     </section>
+
+    <section class="contact-section" id="contact">
+      <h1>Contact Me</h1>
+
+      <form>
+        <input type="text" id="name" placeholder="Enter your name" />
+        <input type="email" id="email" placeholder="Email Address" />
+        <textarea id="message" rows="5" placeholder="Your message"></textarea>
+
+        <button type="submit">Send Message</button>
+      </form>
+    </section>
+
+    <footer class="footer">
+      <p>&copy; 2025 John Doe</p>
+
+      <div class="socials">
+        <a href="https://github.com/sanjeev111ok"
+          ><i class="fa-brands fa-github"></i
+        ></a>
+        <a href="https://www.linkedin.com/in/sanjeev-shrestha-7378a9280/"
+          ><i class="fa-brands fa-linkedin"></i
+        ></a>
+        <a href="https://www.facebook.com/sanjeev.acharjushrestha"
+          ><i class="fa-brands fa-square-facebook"></i
+        ></a>
+        <a href="https://www.twitter.com"
+          ><i class="fa-brands fa-x-twitter"></i
+        ></a>
+      </div>
+    </footer>
   </body>
 </html>
