--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
     <nav class="navbar">
@@ -72,36 +72,37 @@
         </div>
       </div>
     </section>
+    <div class="contactFooter">
+      <section class="contact-section" id="contact">
+        <h1>Contact Me</h1>
 
-    <section class="contact-section" id="contact">
-      <h1>Contact Me</h1>
+        <form>
+          <input type="text" id="name" placeholder="Enter your name" />
+          <input type="email" id="email" placeholder="Email Address" />
+          <textarea id="message" rows="5" placeholder="Your message"></textarea>
 
-      <form>
-        <input type="text" id="name" placeholder="Enter your name" />
-        <input type="email" id="email" placeholder="Email Address" />
-        <textarea id="message" rows="5" placeholder="Your message"></textarea>
+          <button type="submit">Send Message</button>
+        </form>
+      </section>
 
-        <button type="submit">Send Message</button>
-      </form>
-    </section>
+      <footer class="footer">
+        <p>&copy; 2025 John Doe</p>
 
-    <footer class="footer">
-      <p>&copy; 2025 John Doe</p>
-
-      <div class="socials">
-        <a href="https://github.com/sanjeev111ok"
-          ><i class="fa-brands fa-github"></i
-        ></a>
-        <a href="https://www.linkedin.com/in/sanjeev-shrestha-7378a9280/"
-          ><i class="fa-brands fa-linkedin"></i
-        ></a>
-        <a href="https://www.facebook.com/sanjeev.acharjushrestha"
-          ><i class="fa-brands fa-square-facebook"></i
-        ></a>
-        <a href="https://www.twitter.com"
-          ><i class="fa-brands fa-x-twitter"></i
-        ></a>
-      </div>
-    </footer>
+        <div class="socials">
+          <a href="https://github.com/sanjeev111ok"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+          <a href="https://www.linkedin.com/in/sanjeev-shrestha-7378a9280/"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+          <a href="https://www.facebook.com/sanjeev.acharjushrestha"
+            ><i class="fa-brands fa-square-facebook"></i
+          ></a>
+          <a href="https://www.twitter.com"
+            ><i class="fa-brands fa-x-twitter"></i
+          ></a>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
