--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./index.css" />
+    <script defer src="./index.js"></script>
   </head>
   <body>
     <nav class="navbar">
@@ -76,9 +77,10 @@
       <section class="contact-section" id="contact">
         <h1>Contact Me</h1>
 
-        <form>
+        <form id="myForm">
           <input type="text" id="name" placeholder="Enter your name" />
           <input type="email" id="email" placeholder="Email Address" />
+          <input type="password" id="password" placeholder="Password" />
           <textarea id="message" rows="5" placeholder="Your message"></textarea>
 
           <button type="submit">Send Message</button>
